--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/uuid": "^8.3.0",
     "antd": "^4.12.2",
     "axios": "^0.21.1",
+    "botbuilder-share": "0.0.6",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
